pom update