@@ -15,6 +15,7 @@
         <assertj.core.version>3.27.6</assertj.core.version>
         <mockito.version>5.20.0</mockito.version>
         <javafx.version>25</javafx.version>
+        <surefire.version>3.2.5</surefire.version>
     </properties>
     <dependencies>
         <dependency>
@@ -85,9 +86,11 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>3.2.5</version>
+                <version>${surefire.version}</version>
                 <configuration>
                     <argLine>
+                        --add-exports javafx.graphics/com.sun.glass.ui=ALL-UNNAMED
+                        --add-exports javafx.base/com.sun.javafx.runtime=ALL-UNNAMED
                         -Djava.awt.headless=true
                         -Dprism.order=sw
                         -Dtestfx.robot=glass
